--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,12 +13,12 @@
 		</div>
 		<div class="col-sm-4">
 		  Part:<br />
-		  - <a href="http://iso.nbu.edu.cn">NBU</a>
-		  - <a href="https://www.bgi.com/global/">BGI</a>
-		  - <a href="https://ki.se/en/">KI</a>
+		  <p>- <a href="http://iso.nbu.edu.cn">NBU</a>
+		  <p>- <a href="https://www.bgi.com/global/">BGI</a>
+		  <p>- <a href="https://ki.se/en/">KI</a>
 		</div>
 		<div class="col-sm-4">
-		  Contact:<br />
+		  Mailing:<br />
 		  Units 608-613, Building 15W<br />
 		  No. 15 Science Park West Avenue<br />
 		  Science Park, Sha Tin, Hong Kong<br />
