--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>Site made with <a href="https://jekyllrb.com">Jekyll</a> based on source code from <a href="http://www.allanlab.org">Allen Lab</a>
+		  <p>Site made with <a href="https://jekyllrb.com">Jekyll</a> based on source code from <a href="http://www.allanlab.org">Allan Lab</a>
             
 
 		   <p>  </p><p>
