--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="shortcut icon" type ="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.ico">
 
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  
 {% if jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
