--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,5 @@ layout: default
   </div>
 
 </article>
+
+<span id="busuanzi_container_page_pv"> | 访问量：<span id="busuanzi_value_page_pv"></span> 次</span>
