--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,4 +30,4 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ site.url }}{{ site.baseurl }}/js/bootstrap.min.js"></script>
-<span id="busuanzi_container_site_pv">Page views：<span id="busuanzi_value_site_pv"></span>次</span>
+<span id="busuanzi_container_site_pv">Page views：<span id="busuanzi_value_site_pv"></span>times</span>
