--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
 		</div>
 		<div class="col-sm-4">
 		  Mailing:<br />
-		  Units 608-613, Building 15W<br />
-		  No. 15 Science Park West Avenue<br />
-		  Science Park, Sha Tin, Hong Kong<br />
+		  Room L10-56, 10/F, Laboratory Block<br />
+		  21 Sassoon Road<br />
+		  Hong Kong<br />
 		</div>
 	  </div>
 	</div>
